--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
 	padding-left: 8px;
 	padding-right: 8px;
 	font-size: 1.0em;
-	width: auto;
+	width: 10px;
 	white-space: nowrap;
     text-align: left;
     vertical-align: top;
